2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't use post-4G memory on EFI even if 64-bit since some non-compliant
	implementations bug on them.

	* grub-core/kern/efi/mm.c (grub_efi_allocate_pages): Skip post-4G
	memory.
	(filter_memory_map): Likewise.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-kbdcomp.in: Add missing prefix and exec_prefix variables.
	Reported by: nebuchadnezzar.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-kbdcomp.in: Add missing transform and bindir variables.
	Reported by: nebuchadnezzar.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Submenu default support.

	* grub-core/normal/menu.c (grub_menu_execute_entry): New parameter
	auto_boot. All users updated.
	Declared static.
	Handle chosen and default with submenus.
	(grub_menu_execute_with_fallback): Declared static.
	Don't notify failure if autobooted. Upper level does it.
	(menuentry_eq): New function.
	(get_entry_number): Use menuentry_eq.
	(show_menu): New parameter "autobooted". All users updated.
	(grub_show_menu): Likewise.
	* include/grub/normal.h (grub_show_menu): Likewise.
	* include/grub/menu.h (grub_menu_execute_entry): Removed.
	(grub_menu_execute_with_fallback): Likewise.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mklayout.c (usage): Update help text.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (legacy_file): Trim the line.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c (main): Trim the line.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/init.c (grub_get_conv_memsize): Removed.
	(grub_machine_init): Don't check amount of low memory as reportedly
	INT 12h can be broken and if low memory is too low we wouldn't have
	gotten into grub_machine_init anyway.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
