@@ -1,5 +1,11 @@
 2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/zfs/zfsinfo.c (grub_cmd_zfs_bootfs): Use comma as
+	separator and pass bootpath/devid even if only one of them is available.
+	Reported by: Seth Goldberg.
+
+2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Don't use post-4G memory on EFI even if 64-bit since some non-compliant
 	implementations bug on them.
 
